--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,10 +4,11 @@ layout: default
 
 <div class="home">
 
-  <img style="float:left;width:200px;margin-right:30px;margin-bottom:20px" src="/assets/headshot.jpg" alt="headshot" />
+  <img style="float:left;width:240px;margin-right:30px;margin-bottom:20px" src="/assets/headshot.jpg" alt="headshot" />
   <div style="overflow:hidden;min-width:max-content">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:{{ site.data.contact.email }}">{{ site.data.contact.email }}</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/{{ site.data.contact.linkedin }}">linkedin.com/in/{{ site.data.contact.linkedin }}</a>
     <p>GitHub: <a href="https://github.com/{{ site.data.contact.github }}">github.com/{{ site.data.contact.github }}</a>
     </p>
     <p>Address:</br>{{ site.data.contact.address }}</p>
