Resume reference on homepage
Plus "last modified" moved to default footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
   <main class="page-content" aria-label="Content">
     <div class="wrapper">
       {{ content }}
+      <p>This site was last updated July 18, 2019.</p>
     </div>
   </main>
 
