--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,36 +6,18 @@ layout: default
 
   <img style="float:left;width:240px;margin-right:30px;margin-bottom:20px" src="/assets/headshot.jpg" alt="headshot" />
   <div style="overflow:hidden;min-width:max-content">
-    <h2>Contact</h2>
+    <h2>Information</h2>
+    <p>Phone: {{ site.data.contact.phone }}</p>
     <p>Email: <a href="mailto:{{ site.data.contact.email }}">{{ site.data.contact.email }}</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/{{ site.data.contact.linkedin }}">linkedin.com/in/{{ site.data.contact.linkedin }}</a>
     <p>GitHub: <a href="https://github.com/{{ site.data.contact.github }}">github.com/{{ site.data.contact.github }}</a>
-    </p>
-    <p>Address:</br>{{ site.data.contact.address }}</p>
+    <p>Resume: <a href="assets/resume.pdf">resume.pdf</a></p>
+    <!-- </p>
+    <p>Address:</br>{{ site.data.contact.address }}</p> -->
   </div>
 
   <div style="clear:left">
     {{ content }}
   </div>
-
-  {%- if site.posts.size > 0 -%}
-  <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
-  <ul class="post-list">
-    {%- for post in site.posts -%}
-    <li>
-      {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-      <span class="post-meta">{{ post.date | date: date_format }}</span>
-      <h3>
-        <a class="post-link" href="{{ post.url | relative_url }}">
-          {{ post.title | escape }}
-        </a>
-      </h3>
-      {%- if site.show_excerpts -%}
-      {{ post.excerpt }}
-      {%- endif -%}
-    </li>
-    {%- endfor -%}
-  </ul>
-  {%- endif -%}
 
 </div>
