--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
   <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.jpg?">
-  <link rel="stylesheet" href="{{ "/assets/style.css" | relative_url }}">
+  <link rel="stylesheet" href="/assets/style.css">
   {%- feed_meta -%}
 </head>
