--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,8 +2,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  {%- seo -%}
+  {% seo %}
   <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.jpg?">
   <link rel="stylesheet" href="/assets/style.css">
-  {%- feed_meta -%}
+  {% feed_meta %}
 </head>
