--- a/assets/style.scss
+++ b/assets/style.scss
@@ -97,6 +97,7 @@ table tr:nth-child(even) {
 .site-header {
     border-top: 0px;
     border-bottom: 2px solid #e8e8e8;
+    min-height: unset;
 }
 
 .site-title {
