--- a/assets/style.scss
+++ b/assets/style.scss
@@ -9,6 +9,20 @@
     src: local("Roboto"), url("https://mattdutson.net/assets/Roboto.ttf");
 }
 
+@media screen and (max-width: 600px) {
+    .site-nav {
+        background-color: #ffffff;
+    }
+
+    .site-nav .menu-icon > svg {
+        fill: unset;
+    }
+}
+
+a:hover {
+    color: unset;
+}
+
 blockquote {
     letter-spacing: unset;
     font-size: unset;
@@ -16,6 +30,8 @@ blockquote {
 }
 
 body {
+    background-color: unset;
+    color: unset;
     font-family: "Roboto", sans-serif;
 }
 
@@ -27,12 +43,12 @@ h1, h2, h3, h4, h5, h6, p, blockquote, pre, ul, ol, dl, figure {
     margin-bottom: 12px;
 }
 
-h1, .post-title {
-    font-size: 32px;
+h1, .post-title, .site-title {
+    font-size: 28px;
 }
 
 h2, .post-content h2, .post-list-heading {
-    font-size: 26px;
+    font-size: 24px;
 }
 
 h3, .post-content h3, .post-link {
@@ -83,7 +99,7 @@ table tr:nth-child(even) {
 .pagination {
     padding-top: 20px;
     padding-bottom: 20px;
-    border-top: 2px solid #d0d0d0;
+    border-top: 2.25pt solid #d0d0d0;
 }
 
 .post-link {
@@ -96,8 +112,12 @@ table tr:nth-child(even) {
 
 .site-header {
     border-top: 0px;
-    border-bottom: 2px solid #d0d0d0;
+    border-bottom: 2.25pt solid #d0d0d0;
     min-height: unset;
+}
+
+.site-nav .page-link {
+    color: unset;
 }
 
 .site-title {
@@ -117,8 +137,8 @@ table tr:nth-child(even) {
 .youtube-player {
     width: 100%;
     height: 100%;
-    left:0;
-    top:0;
+    left: 0;
+    top: 0;
     position: absolute;
 }
 
@@ -131,6 +151,11 @@ table tr:nth-child(even) {
     margin-right: 30px;
     margin-bottom: 20px;
     float: left;
+}
+
+#markdown-toc {
+    list-style-type: none;
+    margin-left: 0px;
 }
 
 #summary {
